# sonic-dash-api

./: .gitignore  Cargo.toml  Makefile  README.md  Readme.md  azure-pipelines.yml
.azure-pipelines/: build-template.yml
.github/: copilot-instructions.md
crates/sonic-dash-api-proto/: Cargo.toml  build.rs
crates/sonic-dash-api-proto/src/: lib.rs
debian/: control  rules
gnmi_path/DPU0/APPL_DB/DASH_ACL_IN_TABLE/: acl_in.proto
gnmi_path/DPU0/APPL_DB/DASH_ACL_OUT_TABLE/: acl_out.proto
gnmi_path/DPU0/APPL_DB/DASH_ENI_TABLE/: eni.proto
gnmi_path/DPU0/APPL_DB/DASH_METER/: meter.proto
gnmi_path/DPU0/APPL_DB/DASH_METER_POLICY/: meter_policy.proto
gnmi_path/DPU0/APPL_DB/DASH_METER_RULE/: meter_rule.proto
gnmi_path/DPU0/APPL_DB/DASH_PREFIX_TAG_TABLE/: prefix_tag.proto
gnmi_path/DPU0/APPL_DB/DASH_QOS_TABLE/: qos.proto
gnmi_path/DPU0/APPL_DB/DASH_ROUTE_RULE_TABLE/: route_rule.proto
misc/: .gitignore  dash_api_utils  utils.cpp  utils.h  utils.i
misc/tests/: Makefile  main.cpp  test_utils.py  utils_unittest.cpp
proto/: acl.proto  acl_group.proto  acl_in.proto  acl_out.proto  acl_rule.proto  appliance.proto  dpu_ha_scope.proto  dpu_ha_set.proto  dpu_reset_info.proto  eni.proto  eni_route.proto  ha_scope.proto  ha_scope_config.proto  ha_scope_state.proto  ha_set.proto  ha_set_config.proto  ha_set_state.proto  meter.proto  meter_policy.proto  meter_rule.proto  npu_ha_scope.proto  npu_ha_set.proto  outbound_port_map.proto  outbound_port_map_range.proto  pa_validation.proto  prefix_tag.proto  qos.proto  route.proto  route_group.proto  route_lpm.proto  route_rule.proto  route_type.proto  routing_appliance.proto  tag.proto  tunnel.proto  types.proto  vnet.proto  vnet_mapping.proto
(+8 files in other folders)
