[package]
name = "sonic-dash-api-proto"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
sonicdb-derive.workspace = true
swss-common.workspace = true
sonicdb.workspace = true
hex.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

[build-dependencies]
prost-build.workspace = true
